--- a/github1/index.html
+++ b/github1/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="description" content="Описание сайта">
 		<meta name="keywords" content="Ключевые слова">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 		<link rel="shortcut icon" href="#">
@@ -150,7 +151,7 @@
 					Recieve Updates
 				</h4>
 				<div class="join">
-				<input type="email" placeholder="Leave Your Email here">
+				<input type="email" placeholder="Leave Your Email">
 				<input type="submit" value="Join">
 				</div>
 				<p>
