--- a/github1/index.html
+++ b/github1/index.html
@@ -27,6 +27,7 @@
 					</div>
 					<div class="bg-logo">Creative<span class="logo-plus"><sup>+</sup></span></div>
 				</div>
+				<div class="burger">&#9776;</div>
 			</header>
 			<div class="wrap">
 			<div class="content">
@@ -207,6 +208,7 @@
 				</p>
 			</div>
 		</div>
+		<div id="toTop">Наверх</div>
 	</footer>
 	<div class="social-left">
 		<div class="social-int"></div>
@@ -215,7 +217,8 @@
 		<div class="social-f"></div>
 	</div>
 </div>
-		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-		<script src="script.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
+	<script src="script.js"></script>	
+	
 	</body>
 	</html>	
