--- a/github1/index.html
+++ b/github1/index.html
@@ -217,6 +217,7 @@
 		<div class="social-f"></div>
 	</div>
 	<div class="arrow"></div>
+	<div class="arrow-back"></div>
 </div>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
 	<script src="script.js"></script>	
