--- a/Github/index.html
+++ b/Github/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="description" content="Работаем с 2009г. Полный спектр сантехнических услуг. Осмотр, диагностика и составление проектов бесплатно. При заказе под ключ - подарок.">
 	<meta name="keywords" content="сантехник тольятти, замена сантехники, замена труб, канализация замена, сварка водопровод, счетчики воды замена, ванная под ключ, замена смесителя">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="owlcarousel/assets/owl.carousel.min.css">
 	<link rel="stylesheet" href="owlcarousel/assets/owl.theme.default.min.css">
 	<link rel="stylesheet" href="style.css">
