--- a/Github/price1.html
+++ b/Github/price1.html
@@ -2,11 +2,18 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Описание сайта">
-	<meta name="keywords" content="Ключевые слова">
+	<meta name="description" content="Работаем с 2009г. Полный спектр сантехнических услуг. Осмотр, диагностика и составление проектов бесплатно. При заказе под ключ - подарок.">
+	<meta name="keywords" content="сантехник тольятти, замена сантехники, замена труб, канализация замена, сварка водопровод, счетчики воды замена, ванная под ключ, замена смесителя">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="owlcarousel/assets/owl.carousel.min.css">
+	<link rel="stylesheet" href="owlcarousel/assets/owl.theme.default.min.css">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="revealator/fm.revealator.jquery.min.css">
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	<script src="revealator/fm.revealator.jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-	<link rel="shortcut icon" href="#">
+	<link rel="shortcut icon" href="img/favicon.ico">
+	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 	<title>Цены</title>	
 </head>
 <body>
