--- a/Github/index.html
+++ b/Github/index.html
@@ -58,26 +58,26 @@
 			<div class="wrapper">
 				<a name="man"></a>
 				<h1>НАША КОМАНДА</h1>
-				<div class="team_cards">
-					<div class="card revealator-slideup revealator-delay1 revealator-once">
+				<div class="team_cards revealator-zoomin revealator-delay1 revealator-once">
+					<div class="card">
 						<div class="photo photo2"></div>
 						<h4 class="name">Aleksey</h4>
 						<p class="position">Сварщик-сантехник</p>
 						<p class="about_position">Полный комплекс услуг, от замены смесителя до сварки водопровода.</p>
 					</div>
-					<div class="card revealator-slideup revealator-delay2 revealator-once">
+					<div class="card">
 						<div class="photo photo1"></div>
 						<h4 class="name">Ivan</h4>
 						<p class="position">Слесарь-сантехник</p>
 						<p class="about_position">Замена сантехники, пайка полипропиленовых труб.</p>
 					</div>
-					<div class="card revealator-slideup revealator-delay3 revealator-once">
+					<div class="card">
 						<div class="photo photo3"></div>
 						<h4 class="name">Andrey</h4>
 						<p class="position">Слесарь-сантехник</p>
 						<p class="about_position">Замена канализации, труб, ванная под ключ.</p>
 					</div>
-					<div class="card revealator-slideup revealator-delay4 revealator-once">
+					<div class="card">
 						<div class="photo photo4"></div>
 						<h4 class="name">Andrey</h4>
 						<p class="position">Сантехник-универсал</p>
@@ -93,7 +93,7 @@
 				<p><i>Мы оказываем широкий спектр услуг: 
 				</i></p>
 			<div class="grid_services_cards">
-				<div class="services_cards revealator-zoomin revealator-delay1 revealator-once">
+				<div class="services_cards revealator-slideright revealator-delay1 revealator-once">
 					<div class="services_card">
 						<img src="img/smart.png" alt="">
 						<h4>ЗАМЕНА САНТЕХНИКИ</h4>
@@ -101,7 +101,7 @@
 					</div>
 					<a href="price1.html"><div class="price">Узнать стоимость</div></a>
 				</div>
-				<div class="services_cards revealator-zoomin revealator-delay2 revealator-once">
+				<div class="services_cards revealator-slideright revealator-delay2 revealator-once">
 					<div class="services_card">
 						<img src="img/truba.png" alt="">
 						<h4>ЗАМЕНА ТРУБОПРОВОДА</h4>
@@ -109,7 +109,7 @@
 					</div>
 					<a href="price1.html"><div class="price">Узнать стоимость</div></a>
 				</div>
-				<div class="services_cards revealator-zoomin revealator-delay3 revealator-once">
+				<div class="services_cards revealator-slideright revealator-delay3 revealator-once">
 					<div class="services_card">
 						<img src="img/svarka.png" alt="">
 						<h4>СВАРОЧНЫЕ РАБОТЫ</h4>
@@ -117,7 +117,7 @@
 					</div>
 					<a href="price1.html"><div class="price">Узнать стоимость</div></a>
 				</div>
-				<div class="services_cards revealator-zoomin revealator-delay4 revealator-once">
+				<div class="services_cards revealator-slideright revealator-delay4 revealator-once">
 					<div class="services_card">
 						<img src="img/kanal.png" alt="">
 						<h4>КАНАЛИЗАЦИЯ</h4>
