--- a/Visitka/index.html
+++ b/Visitka/index.html
@@ -175,7 +175,7 @@
 				+79277890587
 				</div>
 				<div class="policy">
-					Политика конфидициальности
+					Политика конфиденциальности
 				</div>
 				
 			</div>
