--- a/Massaj/index.html
+++ b/Massaj/index.html
@@ -107,7 +107,7 @@
 				</div>
 			<div class="footer-bottom">
 				<div class="text">
-					&#169 2019 IvanTlt.ru
+					&#169 2019 fhcompany.ru
 				</div>
 					<div class="soc_box">
 						<div class="soc_box_cover">
