--- a/visitka_workzilla/index.html
+++ b/visitka_workzilla/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
+    <!-- <link rel="import" href="/import1.html"> -->
     <link rel="icon" href="img/mod/house.png" type="image/x-icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <title>Визитка</title>
 </head>
+
 <body>
     <div class="wrap">
-        <div class="head_logo"><p>Строительство деревянных домов премиум-класса </p></div>
-        <div class="main_text">
+        <div class="head_logo">
+            <p>Строительство деревянных домов премиум-класса </p>
+        </div>
+        <div class="main_text" id="import1">
             <div class="main_text_left">
-               <div class="main_text_left_box main_text_left_box_1">О компании</div> 
-               <div class="main_text_left_box main_text_left_box_2">О компании</div>
-               <div class="main_text_left_box main_text_left_box_3">О компании</div>
+                <div class="main_text_left_box main_text_left_box_1">О компании</div>
+                <div class="main_text_left_box main_text_left_box_2">О компании</div>
+                <div class="main_text_left_box main_text_left_box_3">О компании</div>
             </div>
             <div class="container-text-wrap">
-                <div class="container-text"><p id="container-text-p">Компания</p></div>
+                <div class="container-text">
+                    <p id="container-text-p">Компания</p>
+                </div>
             </div>
             <div class="main_text_right">
                 <div class="main_text_right_box main_text_left_box_4">О компании</div>
@@ -32,17 +41,22 @@
             <div class="box_img box_img_3">затем сюда</div>
             <div class="box_img box_img_4">далее сюда</div>
             <div class="box_img box_img_5">потом сюда</div>
-            <div class="box_img box_img_6">и сюда</div>
-            <div class="box_img box_img_7">на главную</div>
+            <!-- <div class="box_img box_img_6">и сюда</div>
+            <div class="box_img box_img_7">на главную</div> -->
         </div>
+
+        <script charset="utf-8" type="text/javascript" src="https://callback-free.ru/api/js/form-builder.js"
+            data-key="GnRSO1yp"></script>
+
         <div class="contacts">
-                <div class="logo">Деревяшка</div>
-                <div class="phone">+79277777777</div>
-                <div class="email">mail@mail.ru</div>
-            </div>
+            <div class="logo">Деревяшка</div>
+            <div class="phone">+79277777777</div>
+            <div class="email">mail@mail.ru</div>
+        </div>
     </div>
 
 
-<script src="script.js"></script>    
+    <script src="script.js"></script>
 </body>
+
 </html>
