--- a/Granit/footer.html
+++ b/Granit/footer.html
@@ -6,7 +6,7 @@
             <span class="font-weight-bold granit">GRANIT</span><br>
             <div>Доставка нерудных материалов</div>
           </div>
-          <span class="mt-5"><i class="fa fa-copyright mr-1" aria-hidden="true"></i>2016. Гранти</span>
+          <span class="mt-5"><i class="fa fa-copyright mr-1" aria-hidden="true"></i>2016. Гранит</span>
         </div>
         <div class="footer_right d-flex flex-column justify-content-between text-lg-right text-center">
           <span class="font-weight-bold granit">8 800 342-13-33</span>
